<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />


    <item
        android:id="@+id/navigation_symptom_tracker"
        android:icon="@drawable/ic_symptom_tracker"
        android:title="@string/title_symptom_tracker" />



</menu>
