<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_account"
        />

    <LinearLayout
        android:id="@+id/LL"
        android:layout_below="@id/Dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/pro_user"
            android:layout_width="match_parent"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/albert_robinson"
            android:textAlignment="center"
            android:textSize="32sp" />

        <Button
            android:background="@drawable/button_custom"
            android:textColor="#fff"
            android:id="@+id/pro_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/logout"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/about1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/about_the_app"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_us"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:maxLines="0"
                    android:text="@string/lorem_ipsum"
                    android:textAlignment="center" />


            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:text="@string/terms_and_conditions"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#fff"
                    android:maxLines="0"
                    android:text="@string/lorem_ipsum"
                    android:textAlignment="center" />


            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/privacy1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:maxLines="0"
                    android:layout_margin="10dp"
                    android:text="@string/lorem_ipsum"
                    android:textAlignment="center" />


            </LinearLayout>
        </ScrollView>



    </LinearLayout>


</RelativeLayout>